fixed the color of the shopping cart icon on small screens

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -212,7 +212,6 @@ datalist {
     margin: 5px;
   }
   .shopping-container {
-    color: var(--title-text-orange);
     margin: 5px;
   }
 }
